# JBG-050

./: pyproject.toml
jbg050_9/: .#train.py  astgcn.py  astgcn.py~  dataset.py  graph_preprocessing.py  graph_preprocessing.py~  hmm.py  hmm.py~  main.py  models.py  output_norm.txt  parser.py  train_test.py
jbg050_9/wandb/: latest-run
jbg050_9/wandb/run-20230531_202233-cler51yd/: run-cler51yd.wandb
jbg050_9/wandb/run-20230531_202233-cler51yd/files/: config.yaml  wandb-metadata.json
jbg050_9/wandb/run-20230531_202259-3i8xqr4b/: run-3i8xqr4b.wandb
jbg050_9/wandb/run-20230531_202259-3i8xqr4b/files/: config.yaml  wandb-metadata.json  wandb-summary.json
jbg050_9/wandb/run-20230531_202353-44kgr5bx/: run-44kgr5bx.wandb
jbg050_9/wandb/run-20230531_202353-44kgr5bx/files/: config.yaml  wandb-metadata.json  wandb-summary.json
jbg050_9/wandb/run-20230531_203033-v4g0b0il/: run-v4g0b0il.wandb
jbg050_9/wandb/run-20230531_203033-v4g0b0il/files/: config.yaml  wandb-metadata.json
jbg050_9/wandb/run-20230531_205833-9a1nndb0/: run-9a1nndb0.wandb
jbg050_9/wandb/run-20230531_205833-9a1nndb0/files/: config.yaml  (+2 more)
jbg050_9/wandb/run-20230531_210516-l33hwrvy/: run-l33hwrvy.wandb
jbg050_9/wandb/run-20230531_211235-3aluuavg/: run-3aluuavg.wandb
jbg050_9/wandb/run-20230531_213136-6crsj69y/: run-6crsj69y.wandb
jbg050_9/wandb/run-20230531_213951-9ca5txhi/: run-9ca5txhi.wandb
jbg050_9/wandb/run-20230531_220306-0rey8ega/: run-0rey8ega.wandb
jbg050_9/wandb/run-20230531_224235-hx5ghcpr/: run-hx5ghcpr.wandb
jbg050_9/wandb/run-20230531_224806-61pse7xv/: run-61pse7xv.wandb
(+21 files in other folders)
