[tool.poetry]
name = "jbg050-9"
version = "0.1.0"
description = ""
authors = ["everbarry <alessandro.preiti@protonmail.com>"]
readme = "README.md"
packages = [{include = "jbg050_9"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
